# hermes-a2a

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
hermes_a2a/: __main__.py  agent_card.py  config.py  executor.py  file_utils.py  hermes_client.py
tests/: test_executor.py  test_hermes_client.py
